--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,12 +10,13 @@ jobs:
       matrix:
         node-version: [16.x]
     steps:
-      - uses:
-          actions/checkout@v2
+      - uses: actions/checkout@v2
+
       - name: Use Node.js ${{ matrix.node-version }}
-      - uses: actions/setup-node@v1
+        uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+
       - name: Cache node modules
         id: cache-nodemodules
         uses: actions/cache@v2
@@ -28,10 +29,13 @@ jobs:
             ${{runner.os}}-build-${{env.cache-name}}-
             ${{runner-os}}-build-
             ${{runner.os}}-
+
       - name: Install Dependencies
         if: steps.cache-nodemodules.outputs.cache-hit != 'true'
         run: npm ci
+
       - name: Build
         run: npm run build -- --prod
+
       - name: Test
         run: npm run test -- --prod
