--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
           key: ${{runner.os}}-build-${{env.cache-name}}-${{hashFiles('**/package-lock.json')}}
           restore-keys: |
             ${{runner.os}}-build-${{env.cache-name}}-
-            ${{runner-os}}-build-
+            ${{runner.os}}-build-
             ${{runner.os}}-
 
       - name: Install Dependencies
