--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "angular-hello-world",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --base-href=/angular-tour-of-heroes/"
+    "deploy": "ng deploy --base-href=/angular-tour-of-heroes/ --no-silent"
   },
   "private": true,
   "dependencies": {
