--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --base-href=/angular-tour-of-heroes/ --no-silent"
+    "deploy": "ng deploy --base-href=/angular-tour-of-heroes/ --name='Mart1n-S' --email='martinsimongo@gmail.com' --no-silent"
   },
   "private": true,
   "dependencies": {
