--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,15 +41,16 @@ jobs:
       # - name: Test
       #   run: npm run test -- --prod
 
-      # - name: Conventional changelog Action
-      #   id: changelog
-      #   uses: TriPSs/conventional-changelog-action@v3
-      #   with:
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
-      #     output-file: "false"
+      - name: Conventional changelog Action
+        id: changelog
+        uses: TriPSs/conventional-changelog-action@v3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          output-file: "false"
 
       - name: Create Release
         uses: actions/create-release@v1
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
